test/negative/invalid_bus_size_constant.net
INPUT
OUTPUT a
VAR a: 2
IN
a = NOT 0
